// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders component 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-title-4"
    variant="caption"
  >
    this is a title of the slider
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      direction="row"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="makeStyles-label-3"
          display="inline"
          variant="body2"
        >
          $0
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-sliderContainer-1"
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Slider))
          ThumbComponent={[Function]}
          classes={
            Object {
              "root": "makeStyles-sliderRoot-2",
              "thumb": "makeStyles-thumb-7",
              "track": "makeStyles-track-6",
            }
          }
          max={100}
          min={0}
          onChange={[MockFunction]}
          value={23}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="makeStyles-label-3"
          display="inline"
          variant="body2"
        >
          $max
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Slider renders custom min/max 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-title-4"
    variant="caption"
  >
    this is a title of the slider
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      direction="row"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="makeStyles-label-3"
          display="inline"
          variant="body2"
        >
          $0
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-sliderContainer-1"
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Slider))
          ThumbComponent={[Function]}
          classes={
            Object {
              "root": "makeStyles-sliderRoot-2",
              "thumb": "makeStyles-thumb-7",
              "track": "makeStyles-track-6",
            }
          }
          max={20}
          min={-20}
          onChange={[MockFunction]}
          value={8}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="makeStyles-label-3"
          display="inline"
          variant="body2"
        >
          $max
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`Slider renders with labels 1`] = `
<WithStyles(ForwardRef(Grid))
  alignItems="center"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Typography))
    className="makeStyles-title-4"
    variant="caption"
  >
    this is a title of the slider
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Grid))
      container={true}
      direction="row"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="makeStyles-label-3"
          display="inline"
          variant="body2"
        >
          $ MIN
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-sliderContainer-1"
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Slider))
          ThumbComponent={[Function]}
          classes={
            Object {
              "root": "makeStyles-sliderRoot-2",
              "thumb": "makeStyles-thumb-7",
              "track": "makeStyles-track-6",
            }
          }
          max={100}
          min={0}
          onChange={[MockFunction]}
          value={23}
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
      >
        <WithStyles(ForwardRef(Typography))
          className="makeStyles-label-3"
          display="inline"
          variant="body2"
        >
          $ MAX
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
